<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2025 Daniel Monedero-Tortola

This file is part of Saver.

Saver is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Saver is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Saver.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Saver</string>
    <string name="price">Price</string>
    <string name="price_per_kilogram">Price per kilogram: </string>
    <string name="price_per_pound">Price per pound: </string>
    <string name="price_per_kilogram_hint">Price per kilogram</string>
    <string name="price_per_pound_hint">Price per pound</string>
    <string name="product">Product</string>
    <string name="search_product">Search product</string>
    <string name="calculate">Calculate</string>
    <string name="add_product">Add product</string>
    <string name="update_product">Update product</string>
    <string name="remove_product">Remove product</string>
    <string name="place">Place</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear</string>
    <string name="weight_unit">Weight unit</string>
    <string name="ounces">Ounces</string>
    <string name="pounds">Pounds</string>
    <string name="grams">Grams</string>
    <string name="kilograms">Kilograms</string>
    <string name="database_path">Database path</string>
    <string name="http">http://</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="compare">Compare</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="date">Date</string>
    <string name="export_db">Export DB</string>
    <string name="import_db">Import DB</string>
    <string name="product_name">Product Name</string>
    <string name="weight">Weight</string>
    <string name="url">URL</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
</resources>