<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2018 Daniel Monedero-Tortola

This file is part of Saver.

Saver is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Saver is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Saver.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView
		android:id="@+id/product_separator"
		android:text="@string/product"
		style="?android:attr/listSeparatorTextViewStyle"
		/>
	<EditText
		android:id="@+id/product_entry"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/product_separator"
		android:singleLine="true"
		android:inputType="textCapWords"
		android:imeOptions="actionNext"
		android:hint="@string/product"
		android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
		/>
	<AutoCompleteTextView
		android:id="@+id/place_entry_autocomplete"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/product_entry"
		android:singleLine="true"
		android:inputType="text|textVisiblePassword"
		android:imeOptions="actionNext"
		android:hint="@string/place"
		android:drawableLeft="@drawable/ic_store_black_24dp"
		/>
	<EditText
		android:id="@+id/price_per_weight_entry"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/place_entry_autocomplete"
		android:inputType="numberDecimal"
		android:imeOptions="actionDone"
		android:drawableLeft="@drawable/ic_attach_money_black_24dp"
		/>
	<EditText
		android:id="@+id/url_entry"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/price_per_weight_entry"
		android:inputType="textUri"
		android:imeOptions="actionDone"
		android:hint="@string/http"
		android:drawableLeft="@drawable/ic_http_black_24dp"
		/>
	<Button
		android:id="@+id/delete_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/url_entry"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="10dip"
		android:text="@string/delete"
		android:drawableLeft="@drawable/ic_delete_black_24dp"
		/>
	<Button
		android:id="@+id/done_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/url_entry"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dip"
		android:text="@string/save"
		android:drawableLeft="@drawable/ic_done_black_24dp"
		/>
	<Button
		android:id="@+id/history_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/done_button"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dip"
		android:text="@string/history"
		android:drawableLeft="@drawable/ic_history_black_24dp"
		/>
</RelativeLayout>