<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2025 Daniel Monedero-Tortola

This file is part of Saver.

Saver is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Saver is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Saver.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="16dp"
    android:paddingBottom="64dp">
    <TextView
        android:id="@+id/search_separator"
        android:text="@string/settings"
        style="?android:attr/listSeparatorTextViewStyle" />

    <TextView
        android:id="@+id/weight_unit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_separator"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weight_unit"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight_unit_label"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/weight_unit_group">
        <RadioButton android:id="@+id/kilograms_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilograms"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/pounds_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pounds"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/database_path_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight_unit_group"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/database_path" />

    <TextView
        android:id="@+id/database_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/database_path_label"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/database_path" />
</RelativeLayout>